refines issue7 cover spacing

--- a/styles/Issue7.module.css
+++ b/styles/Issue7.module.css
@@ -101,6 +101,7 @@
   left: 0px;
   overflow: hidden;
   animation: fadeIn ease-out 0.9s;
+  overflow:hidden;
 }
 
 .pageTitle {
